# lws-esp32

./: .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt  hello_world_main.c
